[package]
name = "async_executors_ext"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_executors = { git = "https://github.com/najamelan/async_executors", rev = "84e47cd8cf2923fc5ae59938d9d30ed77d51f36b" }
futures-util = "*"
futures-task = "*"
futures-executor = "*"
glommio_crate = { version = "*", optional = true, package = "glommio" }
crossbeam = "*"
blocking = "*"
nix = { version = "*", optional = true }
tokio_crate = { version = "*", optional = true, package = "tokio" }
[features]
default = []
glommio = ["glommio_crate", "async_executors/glommio", "nix"]
tokio = ["tokio_crate", "async_executors/tokio_ct", "async_executors/tokio_tp", "async_executors/tokio_timer", "async_executors/tokio_io"]


[[example]]
name = "glommio_tp"
required-features = ["glommio"]

[[example]]
name = "tokio_tp"
required-features = ["tokio"]