[package]
name = "async_executors_ext"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_executors = { git = "https://github.com/najamelan/async_executors", rev = "cff5259204f3542f4709cc7c9f2cbadf955a3611", features = ["timer"] }
futures-util = "*"
futures-task = "*"
futures-executor = "*"
glommio_crate = { version = "*", optional = true, package = "glommio" }
crossbeam = "*"
blocking = "*"
nix = "*"
tokio_crate = { version = "*", optional = true, package = "tokio" }
[features]
default = []
glommio = ["glommio_crate", "async_executors/glommio"]
tokio = ["tokio_crate", "async_executors/tokio_ct", "async_executors/tokio_tp", "async_executors/tokio_timer", "async_executors/tokio_io"]


[[example]]
name = "glommio_tp"
required-features = ["glommio"]

[[example]]
name = "tokio_tp"
required-features = ["tokio"]